# AgenticQaOrchestrator

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  orchestrator.py  package-lock.json  package.json  playwright.config.ts  poll_and_run.py  pyproject.toml
.github/workflows/: drive_poll.yml  qa_pipeline.yml
agents/: analyzer.py  base.py  inspector.py  playwright_gen.py  test_writer.py
integrations/: github_sync.py  gmail.py  google_docs.py  google_drive.py
prompts/: analyzer_prompt.txt  inspector_prompt.txt  playwright_prompt.txt  test_writer_prompt.txt
scripts/: extract_base_url.js
tests/: conftest.py  test_analyzer.py  test_github_sync.py  test_inspector.py  test_poll_and_run.py
