[project]
name = "agenticqa-orchestrator"
version = "0.1.0"
description = "Multi-agent AI pipeline for automated QA test generation and execution."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.54.0",
    "beautifulsoup4>=4.12.0",
    "google-api-python-client>=2.177.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.15",
    "langchain-openai>=0.3.30",
    "openai>=1.99.9",
    "playwright>=1.44.0",
    "PyGithub>=2.8.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.uv]
package = false